--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "screenfull": "^5.0.2",
     "vue": "2.6.10",
     "vue-i18n": "^8.17.6",
     "vue-router": "3.0.6",
