--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "mockjs": "1.0.1-beta3",
     "runjs": "^4.3.2",
     "sass": "^1.26.8",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "8.0.2",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
     "serve-static": "^1.13.2",
