--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "axios": "0.18.1",
+    "axios": "^0.20.0",
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "element-ui": "^2.13.2",
