--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue": "2.6.10",
     "vue-i18n": "^8.17.6",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
