--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "element-ui": "^2.13.2",
+    "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
