--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "axios": "^0.20.0",
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
-    "element-ui": "^2.14.0",
+    "element-ui": "^2.14.1",
     "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "screenfull": "^5.0.2",
-    "vue": "2.6.10",
-    "vue-i18n": "^8.17.6",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.22.2",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "xlsx": "^0.16.8"
@@ -43,21 +43,21 @@
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
-    "chokidar": "^3.4.0",
+    "chokidar": "^3.4.3",
     "connect": "3.6.6",
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
     "runjs": "^4.3.2",
-    "sass": "^1.26.8",
+    "sass": "^1.29.0",
     "sass-loader": "8.0.2",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "^2.6.12"
   },
   "engines": {
     "node": ">=8.9",
