--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.20.0",
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
+    "dayjs": "^1.9.6",
     "element-ui": "^2.14.1",
     "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
