--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "element-ui": "^2.14.1",
     "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
+    "lodash.chunk": "^4.2.0",
+    "lodash.clonedeep": "^4.5.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
