--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
+    "release-it": "^14.2.2",
     "runjs": "^4.3.2",
     "sass": "^1.29.0",
     "sass-loader": "8.0.2",
