--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qrcode": "^1.4.4",
     "screenfull": "^5.1.0",
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.4",
