--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.10.4",
     "element-ui": "^2.15.0",
     "file-saver": "^2.0.5",
+    "highlight.js": "^10.6.0",
     "js-cookie": "2.2.0",
     "lodash.chunk": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
