--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
     "chokidar": "^3.5.1",
+    "compression-webpack-plugin": "6.1.1",
     "connect": "3.6.6",
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
