--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "dayjs": "^1.10.4",
+    "element-components": "^0.1.5",
     "element-ui": "^2.15.0",
     "file-saver": "^2.0.5",
     "highlight.js": "^10.6.0",
