--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
+package-lock.json*
+yarn.lock*
 tests/**/coverage/
 
 # Editor directories and files
