--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "dayjs": "^1.10.4",
-    "element-components": "^1.6.18",
+    "element-components": "^1.6.19",
     "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "highlight.js": "^10.7.2",
@@ -57,10 +57,10 @@
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
-    "node-sass": "^6.0.0",
     "regenerator-runtime": "^0.13.7",
     "release-it": "^14.6.1",
     "runjs": "^4.3.2",
+    "sass": "^1.43.4",
     "sass-loader": "10.2.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
