--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "test:ci": "npm run lint && npm run test:unit",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
-    "release": "release-it && git push --follow-tags origin master"
+    "release": "release-it && git push --follow-tags origin master",
+    "new": "plop"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "dayjs": "^1.10.4",
@@ -33,30 +34,30 @@
     "path-to-regexp": "2.4.0",
     "qrcode": "^1.4.4",
     "screenfull": "^5.1.0",
-    "vue": "^2.6.14",
+    "vue": "^2.6.11",
     "vue-i18n": "^8.24.3",
-    "vue-router": "3.0.6",
-    "vuex": "3.1.0",
-    "xlsx": "^0.17.4"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.4.4",
-    "@vue/cli-plugin-eslint": "4.4.4",
-    "@vue/cli-plugin-unit-jest": "4.4.4",
-    "@vue/cli-service": "4.4.4",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.0.3",
     "autoprefixer": "^9.8.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-plugin-dynamic-import-node": "2.3.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "chalk": "2.4.2",
     "chokidar": "^3.5.1",
     "compression-webpack-plugin": "6.1.1",
     "connect": "3.6.6",
-    "eslint": "5.15.3",
-    "eslint-plugin-vue": "5.2.2",
-    "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
+    "plop": "^3.0.2",
     "regenerator-runtime": "^0.13.7",
     "release-it": "^14.6.1",
     "runjs": "^4.3.2",
@@ -67,16 +68,8 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.11"
   },
-  "engines": {
-    "node": ">=8.9",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
   "release-it": {
     "npm": {
       "publish": false
