--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,19 @@
 {
   "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
     "baseUrl": "./",
+    "moduleResolution": "node",
     "paths": {
-        "@/*": ["src/*"]
-    }
-  },
-  "exclude": ["node_modules", "dist"]
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
+  }
 }
