--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "new": "plop"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "@vueuse/core": "^8.9.4",
+    "axios": "^0.27.2",
     "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "dayjs": "^1.10.4",
     "element-components": "^1.6.20",
-    "element-ui": "^2.15.6",
+    "element-ui": "^2.15.9",
     "file-saver": "^2.0.5",
     "highlight.js": "^10.7.2",
     "js-cookie": "2.2.0",
@@ -34,7 +35,7 @@
     "path-to-regexp": "2.4.0",
     "qrcode": "^1.4.4",
     "screenfull": "^5.1.0",
-    "vue": "^2.6.11",
+    "vue": "^2.7.7",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
@@ -68,7 +69,7 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.7.7"
   },
   "release-it": {
     "npm": {
