--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
     "normalize.css": "8.0.1",
+    "nprogress": "^0.2.0",
     "path-to-regexp": "2.4.0",
     "qrcode": "^1.5.1",
     "screenfull": "^5.1.0",
