--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "vite": "^3.0.9",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-mock": "^2.9.6"
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-svg-icons": "^2.0.1"
   },
   "release-it": {
     "npm": {
