--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "normalize.css": "8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "6.2.1",
+    "pinia": "^2.0.21",
     "qrcode": "^1.5.1",
     "vue": "^2.7.10",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.6.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
