--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.7.10",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
