--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm install
 
       - name: Build
-        run: npm run build:staging
+        run: npm run build:stage
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
