--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "element-ui": "^2.15.13",
     "file-saver": "^2.0.5",
@@ -21,7 +21,7 @@
     "normalize.css": "8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "6.2.1",
-    "pinia": "^2.0.30",
+    "pinia": "^2.0.33",
     "qrcode": "^1.5.1",
     "vue": "^2.7.14",
     "vue-i18n": "^8.24.3",
@@ -30,14 +30,16 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^4.0.1",
+    "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue2": "^2.2.0",
     "@vitejs/plugin-vue2-jsx": "^1.1.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "mockjs": "^1.1.0",
+    "postcss": "^8.4.21",
     "release-it": "^15.6.0",
-    "sass": "^1.58.3",
-    "vite": "^4.1.2",
+    "sass": "^1.60.0",
+    "unocss": "^0.50.6",
+    "vite": "^4.2.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
