feat: 项目信息调整

--- a/.env.production
+++ b/.env.production
@@ -2,10 +2,10 @@
 VITE_USE_MOCK = false
 
 # public path
-VITE_PUBLIC_PATH = /vant-next-tpl/
+VITE_PUBLIC_PATH = /
 
-# appid for miniprogram
-VITE_WECHAT_APPID = test_appid
+# base api
+VITE_BASE_API = /api
 
 # 是否删除console
 VITE_DROP_CONSOLE = true
