--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-admin-template",
+  "name": "vite-element-admin",
   "version": "0.1.0",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Chan_ <jasonchenzehui@gmail.com>",
+  "description": "A vue admin template with Element UI",
+  "author": "zehuiChan <jasonchenzehui@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
