--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "release": "release-it && git push --follow-tags origin master"
   },
   "dependencies": {
-    "@vueuse/core": "^9.13.0",
-    "axios": "^1.3.4",
+    "@vueuse/core": "^10.1.0",
+    "axios": "^1.3.6",
     "dayjs": "^1.11.7",
     "element-ui": "^2.15.13",
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
-    "normalize.css": "8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "6.2.1",
-    "pinia": "^2.0.33",
-    "qrcode": "^1.5.1",
+    "pinia": "^2.0.35",
+    "qrcode": "^1.5.3",
     "vue": "^2.7.14",
     "vue-i18n": "^8.24.3",
     "vue-router": "^3.6.5",
@@ -30,19 +29,20 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@unocss/reset": "^0.51.8",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-vue2": "^2.2.0",
     "@vitejs/plugin-vue2-jsx": "^1.1.0",
     "autoprefixer": "^10.4.14",
     "mockjs": "^1.1.0",
-    "postcss": "^8.4.21",
-    "release-it": "^15.6.0",
-    "sass": "^1.60.0",
-    "unocss": "^0.50.6",
-    "vite": "^4.2.1",
+    "postcss": "^8.4.23",
+    "release-it": "^15.10.1",
+    "sass": "^1.62.0",
+    "unocss": "^0.51.8",
+    "vite": "^4.3.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-mock": "^3.0.0",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "release-it": {
